--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port=9001
+
 # multipart配置
 //上传文件大小
 spring.servlet.multipart.max-file-size=30MB
@@ -18,8 +20,14 @@ spring.thymeleaf.encoding=UTF-8
 //设置thymeleaf类型
 spring.thymeleaf.servlet.content-type=text/html
 //设置thymeleaf版式
-spring.thymeleaf.mode=HTML5
+spring.thymeleaf.mode=LEGACYHTML5
 //设置thymeleaf目录前缀
 spring.thymeleaf.prefix=classpath:/templates/
 //设置thymeleaf目录后缀
 spring.mvc.view.suffix=.html
+
+//真实存放的路径
+bed.uploadPath=/data/pics/
+//网站访问的路径
+bed.staticPath=/pics/**
+bed.urlPrefix=http://192.168.2.101:9001/pics/
